--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <title>Franco Olivero</title>
+  <title>GRACIELA M. ERMACORA</title>
 
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -89,35 +89,17 @@
         <h1 class="mb-0">GRACIELA M.
           <span class="text-primary">ERMACORA</span>
         </h1>
-        <div class="subheading mb-0">
-          TÉCNICO SUPÉRIOR EN DESARROLLO DE SOFTWARE M.P.: 3402
-        </div>
-        <div class="subheading mb-5"> Morteros, Córdoba, Argentina. &nbsp;<span style="opacity: .5;">|</span> +54
-          (03562)15546669 &nbsp;<span style="opacity: .5;">|</span>&nbsp
-          <a style="color: #d1d4d8;" href="mailto:132franco@gmail.com">132franco@gmail.com
-          </a>
+        <div class="subheading mb-5"> Santo Tomé, Santa Fe, Argentina. &nbsp;<span style="opacity: .5;">|</span> +54
+          (0342)154730702 &nbsp;<span style="opacity: .5;">|</span>&nbsp
+          <a style="color: #d1d4d8;" href="mailto:ermacoramarianela@gmail.com">ermacoramarianela@gmail.com</a>
         </div>
         <p style="text-align: justify;" class="mb-3">
-          Desde chico estoy familiarizado con las computadoras, siempre me intereso saber cómo funcionaba el ordenador,
-          realmente desconocía como era por detrás todo
-          el complejo funcionamiento y que el usuario solo interactuaba de manera tan fácil. <br><br>
-          Entonces me aventure a conocer su funcionamiento y en eso estoy, aprendiendo todos los días, realizando
-          instrucciones para que el ordenador haga lo que yo quiero.
-          Que decir... es fascinante, desafiante y racional.
           Tengo <span id="Edad"></span> Años y trato de cumplir con mis metas y objetivos ganando experiencia en mi vida
           y en todo este lindo rubro.
         </p>
         <ul class="list-inline list-social-icons mb-0">
           <li class="list-inline-item">
-            <a href="https://github.com/fhrancoo">
-              <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-              </span>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a href="https://www.linkedin.com/in/franco-olivero-530849180/">
+            <a href="https://www.linkedin.com/in/marianela-ermacora-aba898173/">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -125,15 +107,7 @@
             </a>
           </li>
           <li class="list-inline-item">
-            <a href="https://twitter.com/fhrancoo">
-              <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-              </span>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a href="https://www.instagram.com/fhrancoo/">
+            <a href="https://www.instagram.com/marianela.ea/">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
@@ -147,28 +121,38 @@
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
       <div class="my-auto">
         <h2 class="mb-5">Experiencia</h2>
-
         <div class="resume-item d-flex flex-column flex-md-row">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">A.C. Systems (Morteros, Córdoba).</h3>
-            <div class="subheading mb-3">Servico Técnico</div>
-            <p>Asistencia y servicios informáticos.</p>
-            <p><b>TIEMPO:</b> part-time</p>
+            <h3 class="mb-0">Tecnofe (Santo Tomé, Santa Fe).</h3>
+            <div class="subheading mb-3">Atención al cliente</div>
+            <p>Venta de insumos informáticos.</p>
+            <p><b>TIEMPO:</b> full-time</p>
           </div>
           <div class="resume-date text-md-right">
-            <span style="color:#d1d4d8">Enero 2021 - Presente</span>
+            <span style="color:#d1d4d8">Abril 2020 - Septiembre 2020</span>
+          </div>
+        </div>
+        <div class="resume-item d-flex flex-column flex-md-row">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Niñera (Santo Tomé, Santa Fe).</h3>
+            <div class="subheading mb-3">Niñera</div>
+            <p>Cuidado de niños.</p>
+            <p><b>TIEMPO:</b> full-time</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span style="color:#d1d4d8">Septiembre 2018 - Febrero 2019</span>
           </div>
         </div>
         <br><br><br>
         <div class="resume-item d-flex flex-column flex-md-row">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">Imprenta "Cúspide Graf" (Morteros, Córdoba).</h3>
-            <div class="subheading mb-3">Diseñador Gráfico</div>
-            <p>Diseños de talonarios, sellos, planillas, logos, etc.</p>
+            <h3 class="mb-0">Supermercado El Túnel (Santo Tomé, Santa Fe).</h3>
+            <div class="subheading mb-3">Cajera</div>
+            <p>Atencion en caja.</p>
             <p><b>TIEMPO:</b> full-time</p>
           </div>
           <div class="resume-date text-md-right">
-            <span style="color:#d1d4d8">Mayo 2019 - Enero 2021</span>
+            <span style="color:#d1d4d8">Diciembre 2015 - Marzo 2016</span>
           </div>
         </div>
       </div>
@@ -178,34 +162,43 @@
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
       <div class="my-auto">
         <h2 class="mb-5">Educación</h2>
-
         <div class="resume-item d-flex flex-column flex-md-row">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">Instituto Superior "María Justa Moyano de Ezpeleta" (Morteros, Córdoba).</h3>
-            <div class="subheading mb-3">Técnicatura Superior en Desarrollo de Software</div>
+            <h3 class="mb-0">Curso de Modelado 3D usando Blender (Online).</h3>
+            <div class="subheading mb-3">Modelado 3D</div>
           </div>
           <div class="resume-date text-md-right">
-            <span style="color:#d1d4d8">Marzo 2018 - Junio 2021</span>
+            <span style="color:#d1d4d8">Marzo 2022 - Abril 2022</span>
           </div>
         </div>
         <br><br><br>
         <div class="resume-item d-flex flex-column flex-md-row">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">Instituto Integral De Idiomas (Morteros, Córdoba).</h3>
-            <div class="subheading mb-3">Inglés Lecto Comprensivo</div>
+            <h3 class="mb-0">Liceo Municipal F.M. San Juan (Santo Tomé, Santa Fe).</h3>
+            <div class="subheading mb-3">Capacitación nivel Intermedio en inglés, Lengua y literatura inglesa</div>
           </div>
           <div class="resume-date text-md-right">
-            <span style="color:#d1d4d8">Marzo 2021 - Diciembre 2021</span>
+            <span style="color:#d1d4d8">Abril 2018 - Noviembre 2020</span>
           </div>
         </div>
         <br><br><br>
         <div class="resume-item d-flex flex-column flex-md-row">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">Instituto Integral De Idiomas (Morteros, Córdoba).</h3>
-            <div class="subheading mb-3">Inglés Comunicacional</div>
+            <h3 class="mb-0">Gestión Empresarial (Santo Tomé, Santa Fe).</h3>
+            <div class="subheading mb-3">E.E.T N° 614 Enrique José Muzzio, Contabilidad y gestión empresarial</div>
           </div>
           <div class="resume-date text-md-right">
-            <span style="color:#d1d4d8">Marzo 2022 - Presente</span>
+            <span style="color:#d1d4d8">Marzo 2017 - Noviembre 2017</span>
+          </div>
+        </div>
+        <br><br><br>
+        <div class="resume-item d-flex flex-column flex-md-row">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Comercio José M. Estrada (Santo Tomé, Santa Fe).</h3>
+            <div class="subheading mb-3">Bachillerato en Economia y Gestion de las Organizaciones</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span style="color:#d1d4d8">Marzo 2010 - Noviembre 2014</span>
           </div>
         </div>
     </section>
@@ -214,56 +207,22 @@
       <div class="my-auto">
         <h2 class="mb-5">Habilidades</h2>
 
-        <div class="subheading mb-3">Lenguajes de Programación y Herramientas</div>
+        <div class="subheading mb-3">Herramientas</div>
         <ul class="list-inline list-icons">
           <li class="list-inline-item">
-            <i title="HTML5" class="devicon-html5-plain"></i>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M224 128L224 0H48C21.49 0 0 21.49 0 48v416C0 490.5 21.49 512 48 512h288c26.51 0 48-21.49 48-48V160h-127.1C238.3 160 224 145.7 224 128zM281.5 240h23.37c7.717 0 13.43 7.18 11.69 14.7l-42.46 184C272.9 444.1 268 448 262.5 448h-29.26c-5.426 0-10.18-3.641-11.59-8.883L192 329.1l-29.61 109.1C160.1 444.4 156.2 448 150.8 448H121.5c-5.588 0-10.44-3.859-11.69-9.305l-42.46-184C65.66 247.2 71.37 240 79.08 240h23.37c5.588 0 10.44 3.859 11.69 9.301L137.8 352L165.6 248.9C167 243.6 171.8 240 177.2 240h29.61c5.426 0 10.18 3.641 11.59 8.883L246.2 352l23.7-102.7C271.1 243.9 275.1 240 281.5 240zM256 0v128h128L256 0z"/></svg>
           </li>
           <li class="list-inline-item">
-            <i title="CSS3" class="devicon-css3-plain"></i>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M224 128L224 0H48C21.49 0 0 21.49 0 48v416C0 490.5 21.49 512 48 512h288c26.51 0 48-21.49 48-48V160h-127.1C238.3 160 224 145.7 224 128zM272.1 264.4L224 344l48.99 79.61C279.6 434.3 271.9 448 259.4 448h-26.43c-5.557 0-10.71-2.883-13.63-7.617L192 396l-27.31 44.38C161.8 445.1 156.6 448 151.1 448H124.6c-12.52 0-20.19-13.73-13.63-24.39L160 344L111 264.4C104.4 253.7 112.1 240 124.6 240h26.43c5.557 0 10.71 2.883 13.63 7.613L192 292l27.31-44.39C222.2 242.9 227.4 240 232.9 240h26.43C271.9 240 279.6 253.7 272.1 264.4zM256 0v128h128L256 0z"/></svg>
           </li>
           <li class="list-inline-item">
-            <i title="JavaScript" class="devicon-javascript-plain"></i>
-          </li>
-          <li class="list-inline-item">
-            <i title="SQL Server" class="devicon-microsoftsqlserver-plain"></i>
-          </li>
-          <li class="list-inline-item">
-            <i title="C#" class="devicon-csharp-plain"></i>
-          </li>
-          <li class="list-inline-item">
-            <i title=".NET" class="devicon-dot-net-plain-wordmark"></i>
-          </li>
-          <li class="list-inline-item">
-            <i title="Git-GitHub" class="devicon-git-plain"></i>
-          </li>
-          <li class="list-inline-item">
-            <i title="jQuery" class="devicon-jquery-plain-wordmark"></i>
-          </li>
-          <li class="list-inline-item">
-            <i title="Visial Studio" class="devicon-visualstudio-plain"></i>
-          </li>
-          <li class="list-inline-item">
-            <i title="Illustrator" class="devicon-illustrator-plain"></i>
-          </li>
-          <li class="list-inline-item">
-            <i title="Photoshop" class="devicon-photoshop-plain"></i>
-          </li>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M256 0v128h128L256 0zM224 128L224 0H48C21.49 0 0 21.49 0 48v416C0 490.5 21.49 512 48 512h288c26.51 0 48-21.49 48-48V160h-127.1C238.3 160 224 145.7 224 128zM279.6 308.1C284.2 353.5 248.5 392 204 392H160v40C160 440.8 152.8 448 144 448H128c-8.836 0-16-7.164-16-16V256c0-8.836 7.164-16 16-16h71.51C239.3 240 275.6 268.5 279.6 308.1zM160 344h44c15.44 0 28-12.56 28-28S219.4 288 204 288H160V344z"/></svg>          </li>
         </ul>
 
         <ul class="fa-ul mb-0">
-          <li><i class="fa-li fa fa-check"></i>JavaScript</li>
-          <li><i class="fa-li fa fa-check"></i>C#</li>
-          <li><i class="fa-li fa fa-check"></i>HTML5</li>
-          <li><i class="fa-li fa fa-check"></i>CCS3</li>
-          <li><i class="fa-li fa fa-check"></i>jQuery</li>
-          <li><i class="fa-li fa fa-check"></i>Rest Api's</li>
-          <li><i class="fa-li fa fa-check"></i>MVC</li>
-          <li><i class="fa-li fa fa-check"></i>.NET</li>
-          <li><i class="fa-li fa fa-check"></i>Git-GitHub</li>
-          <li><i class="fa-li fa fa-check"></i>MS SQL Server</li>
-          <li><i class="fa-li fa fa-check"></i>MySQL</li>
-          <li><i class="fa-li fa fa-check"></i>Scrum</li>
+          <li><i class="fa-li fa fa-check"></i>Word</li>
+          <li><i class="fa-li fa fa-check"></i>Exel</li>
+          <li><i class="fa-li fa fa-check"></i>PowerPoint</li>
         </ul>
 
     </section>
@@ -271,8 +230,8 @@
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
       <div class="my-auto">
         <h2 class="mb-5">Intereses</h2>
-        <p>Backend / Frontend</p>
-        <p class="mb-0">Me interesa trabajos relacionados a Aplicaciones Web.</p>
+        <p>Atención al Cliente.</p>
+        <p class="mb-0">Modelado 3D en Blender.</p>
       </div>
     </section>
 
@@ -319,7 +278,7 @@
 
         <div class="padre-boton" style="vertical-align: middle">
           <div class="boton">
-            <a href="https://docs.google.com/uc?export=download&id=1Nxe9rgKlWPTjewv898RHzr8PIN8Kfneo"><span>Descargar</span>
+            <a href="https://docs.google.com/uc?export=download&id=1TYciPgHZcxZRvHH1lJDgOl9NSYjcagDC"><span>Descargar</span>
               <i class="icon ion-md-download"></i></a>
           </div>
         </div>
@@ -342,16 +301,16 @@
 
     let body = "";
     let body2 = "";
-    for (let i = 1; i <= 17; i++) {
+    for (let i = 1; i <= 2; i++) {
       let contentIMG = "";
       if (i == 1) {
         contentIMG = `<div class="carousel-item active">
-                <img class="d-block w-100" src="img/${i}.jpg" alt="First slide">
+                <img class="d-block w-100" src="img/${i}.png" alt="First slide">
               </div>`;
       }
       else {
         contentIMG = `<div class="carousel-item">
-                <img class="d-block w-100" src="img/${i}.jpg" alt="First slide">
+                <img class="d-block w-100" src="img/${i}.png" alt="First slide">
               </div>`;
       }
 
@@ -393,9 +352,9 @@
     let mesActual = f_actual.getMonth();
     let diaActual = f_actual.getDate();
 
-    let nac_Año = 1999;
-    let nac_Mes = 6;
-    let nac_Dia = 30;
+    let nac_Año = 1997;
+    let nac_Mes = 4;
+    let nac_Dia = 05;
 
     let Edad = añoActual - nac_Año;
 
