--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
           <a style="color: #d1d4d8;" href="mailto:ermacoramarianela@gmail.com">ermacoramarianela@gmail.com</a>
         </div>
         <p style="text-align: justify;" class="mb-3">
-          Tengo <span id="Edad"></span> Años y trato de cumplir con mis metas y objetivos ganando experiencia en mi vida
-          y en todo este lindo rubro.
+          Hola me llamo marianela tengo <span id="Edad"></span> años, hace poco descubri el modelado 3D y me encanta, me considero muy detallista y autodidacta cada día con el ánimo de continuar aprendiendo y,
+           también, aportar toda mi experiencia adquirida en la empresa en la que me encuentre.
         </p>
         <ul class="list-inline list-social-icons mb-0">
           <li class="list-inline-item">
@@ -287,7 +287,7 @@
   </div>
 
   <!-- Bootstrap core JavaScript -->
-  <script src="jquery/jquery.min.js"></script>
+  <script src="jquery/jquery.min.js"></script> 
   <script src="js/bootstrap.bundle.min.js"></script>
 
   <!-- Plugin JavaScript -->
