--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <a style="color: #d1d4d8;" href="mailto:ermacoramarianela@gmail.com">ermacoramarianela@gmail.com</a>
         </div>
         <p style="text-align: justify;" class="mb-3">
-          Hola me llamo marianela tengo <span id="Edad"></span> años, hace poco descubri el modelado 3D y me encanta, me considero muy detallista y autodidacta cada día con el ánimo de continuar aprendiendo y,
+          Hola mi nombre es marianela tengo <span id="Edad"></span> años, hace poco descubri el modelado 3D y me encanta, me considero muy detallista y autodidacta cada día con el ánimo de continuar aprendiendo y,
            también, aportar toda mi experiencia adquirida en la empresa en la que me encuentre.
         </p>
         <ul class="list-inline list-social-icons mb-0">
@@ -162,10 +162,19 @@
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
       <div class="my-auto">
         <h2 class="mb-5">Educación</h2>
+        <div class="resume-date text-md-right">
+        <div class="resume-item d-flex flex-column flex-md-row">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Blender 2.9x a 2.7x Curso Profesional + WEB & Unreal Engine</h3>
+              <div class="subheading mb-3">Udemy</div>
+              </div>
+          <span style="color:#d1d4d8">En curso (45%)</span>
+          </div>
+        </div>
         <div class="resume-item d-flex flex-column flex-md-row">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">Curso de Modelado 3D usando Blender (Online).</h3>
-            <div class="subheading mb-3">Modelado 3D</div>
+            <h3 class="mb-0">Curso de Modelado 3D usando Blender.</h3>
+            <div class="subheading mb-3">Platzi</div>
           </div>
           <div class="resume-date text-md-right">
             <span style="color:#d1d4d8">Marzo 2022 - Abril 2022</span>
@@ -174,8 +183,8 @@
         <br><br><br>
         <div class="resume-item d-flex flex-column flex-md-row">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">Liceo Municipal F.M. San Juan (Santo Tomé, Santa Fe).</h3>
-            <div class="subheading mb-3">Capacitación nivel Intermedio en inglés, Lengua y literatura inglesa</div>
+            <h3 class="mb-0">Capacitación nivel Intermedio en inglés, Lengua y literatura inglesa</h3>
+            <div class="subheading mb-3">Liceo Municipal F.M. San Juan (Santo Tomé, Santa Fe).</div>
           </div>
           <div class="resume-date text-md-right">
             <span style="color:#d1d4d8">Abril 2018 - Noviembre 2020</span>
@@ -184,8 +193,8 @@
         <br><br><br>
         <div class="resume-item d-flex flex-column flex-md-row">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">Gestión Empresarial (Santo Tomé, Santa Fe).</h3>
-            <div class="subheading mb-3">E.E.T N° 614 Enrique José Muzzio, Contabilidad y gestión empresarial</div>
+            <h3 class="mb-0">Gestión Empresarial</h3>
+            <div class="subheading mb-3">E.E.T N° 614 Enrique José Muzzio, (Santo Tomé, Santa Fe).</div>
           </div>
           <div class="resume-date text-md-right">
             <span style="color:#d1d4d8">Marzo 2017 - Noviembre 2017</span>
@@ -194,8 +203,8 @@
         <br><br><br>
         <div class="resume-item d-flex flex-column flex-md-row">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">Comercio José M. Estrada (Santo Tomé, Santa Fe).</h3>
-            <div class="subheading mb-3">Bachillerato en Economia y Gestion de las Organizaciones</div>
+            <h3 class="mb-0">Bachillerato en Economia y Gestion de las Organizaciones</h3>
+            <div class="subheading mb-3">Comercio José M. Estrada (Santo Tomé, Santa Fe).</div>
           </div>
           <div class="resume-date text-md-right">
             <span style="color:#d1d4d8">Marzo 2010 - Noviembre 2014</span>
@@ -230,8 +239,8 @@
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
       <div class="my-auto">
         <h2 class="mb-5">Intereses</h2>
-        <p>Atención al Cliente.</p>
-        <p class="mb-0">Modelado 3D en Blender.</p>
+        <p>Modelado y animacion 3D</p>
+        <p class="mb-0">Atención al Cliente.</p>
       </div>
     </section>
 
