--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
   <link href="devicons/css/devicons.min.css" rel="stylesheet">
   <link href="simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
-  <link rel="shortcut icon" href="img/F.png" type="image/x-icon">
+  <link rel="shortcut icon" href="img/M.png" type="image/x-icon">
   <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.12.0/devicon.min.css">
 
@@ -27,14 +27,15 @@
   <link href="css/resume.min.css" rel="stylesheet">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q9WSLEGN7V"></script>
+
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q9WSLEGN7V"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'G-Q9WSLEGN7V');
-  </script>
+  </script> -->
 
 </head>
 
