--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
         <h1 class="mb-0">GRACIELA M.
           <span class="text-primary">ERMACORA</span>
         </h1>
-        <div class="subheading mb-5"> Santo Tomé, Santa Fe, Argentina. &nbsp;<span style="opacity: .5;">|</span> +54
-          (0342)154730702 &nbsp;<span style="opacity: .5;">|</span>&nbsp
+        <div class="subheading mb-5"> Santo Tomé, Santa Fe, Argentina. &nbsp;<span style="opacity: .5;">|</span>&nbsp
           <a style="color: #d1d4d8;" href="mailto:ermacoramarianela@gmail.com">ermacoramarianela@gmail.com</a>
         </div>
         <p style="text-align: justify;" class="mb-3">
